# resultlib

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  dev-requirements.txt  docker-compose.yml  pyproject.toml
src/resultlib/: __init__.py  py.typed  result.py
tests/: test_result.py
