[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "resultlib"
version = "0.1.0"
description = "A tiny typed Result[T, E] utility for Python"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "resultlib Maintainers" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/jonathangupton/resultlib"
Repository = "https://github.com/your-jonathangupton/resultlib"

[tool.hatch.build.targets.wheel]
packages = ["src/resultlib"]

# Ensure py.typed is included in the wheel
[tool.hatch.build.targets.wheel.force-include]
"src/resultlib/py.typed" = "resultlib/py.typed"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.13"
check_untyped_defs = true
disallow_any_generics = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
strict_equality = true
